# DZWeb2

./: README.md  addressbook.pkl  app.py  pyproject.toml
№2/: Dockerfile  main.py
